# serializer version: 1
# name: test_setup_classic_vario[sensor.mock_classicvario_current_speed-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.mock_classicvario_current_speed',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Current speed',
    'platform': 'eheimdigital',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'current_speed',
    'unique_id': '00:00:00:00:00:03_current_speed',
    'unit_of_measurement': '%',
  })
# ---
# name: test_setup_classic_vario[sensor.mock_classicvario_current_speed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock classicVARIO Current speed',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.mock_classicvario_current_speed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_classic_vario[sensor.mock_classicvario_error_code-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'no_error',
        'rotor_stuck',
        'air_in_filter',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.mock_classicvario_error_code',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Error code',
    'platform': 'eheimdigital',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'error_code',
    'unique_id': '00:00:00:00:00:03_error_code',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_classic_vario[sensor.mock_classicvario_error_code-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Mock classicVARIO Error code',
      'options': list([
        'no_error',
        'rotor_stuck',
        'air_in_filter',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.mock_classicvario_error_code',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_classic_vario[sensor.mock_classicvario_remaining_hours_until_service-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.mock_classicvario_remaining_hours_until_service',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfTime.DAYS: 'd'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Remaining hours until service',
    'platform': 'eheimdigital',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'service_hours',
    'unique_id': '00:00:00:00:00:03_service_hours',
    'unit_of_measurement': <UnitOfTime.DAYS: 'd'>,
  })
# ---
# name: test_setup_classic_vario[sensor.mock_classicvario_remaining_hours_until_service-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Mock classicVARIO Remaining hours until service',
      'unit_of_measurement': <UnitOfTime.DAYS: 'd'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.mock_classicvario_remaining_hours_until_service',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
